# uart_connexion

./: CMakeLists.txt  LICENCE  README.md
GUI/: CMakeLists.txt  CentralPanelWidget.cpp  CentralPanelWidget.hpp  MainWindow.cpp  MainWindow.hpp
GUI/inc/: CentralPanelWidget.hpp  MainWindow.hpp
GUI/src/: CentralPanelWidget.cpp  MainWindow.cpp
arduino_sketch/sketch_react_uart/: sketch_react_uart.ino
controller/: CMakeLists.txt
controller/inc/: Controller.hpp  UARTWorker.hpp  UARTWorkerReceiver.hpp  UARTWorkerSender.hpp
controller/src/: Controller.cpp  UARTWorker.cpp  UARTWorkerReceiver.cpp  UARTWorkerSender.cpp
model/: CMakeLists.txt
model/inc/: UARTSender.hpp
model/src/: UARTSender.cpp
model/test/: testModel.cpp
src/: CMakeLists.txt  main.cpp
